--- a/Css/app.css
+++ b/Css/app.css
@@ -80,38 +80,67 @@
   
   */
 
-.header__video{
+.header{
+    background-image: url(../Images/bg-image/bg1.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 1rem;
     position: relative;
-}
-.header__video::after{
-    content: '';
-    position: absolute;
+    z-index: -10;
     width: 100%;
     height: 100%;
-    background-color: var(--main-bg-color);
+}
+.overlay {
+    position: absolute;
     top: 0;
     left: 0;
-    opacity: 50%;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .6;
+    z-index: -2;
+    box-shadow: 10px 85px 0px 0px rgba(12, 0, 46, .07);
 }
-
 .header-content{
-
+    text-align: center;
+    height: 50%;
+    margin-top: 30rem;
 }
 .header-content__item{
-
+    line-height: 4rem;
 }
 .header-content__left{
 
 }
 .header-content__info{
+    font-size: 2.5rem;
+    color: var(--main-color);
 
 }
 
 .header-content__title{
+    font-size: 5.5rem;
+    color: var(--white);
 
 }
 .header-content__button{
+    cursor: pointer;
+    margin-top: 5rem;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    padding: 2rem 3rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    transition: var(--text-transition);
+    color: var(--white);
+    font-size: 2rem;
+    border: solid 1px var(--main-color);
 
+}
+.header-content__button:hover{
+    background-color: var(--main-color);
+    color: var(--white);
 }
 .header-content__right{
 
@@ -125,7 +154,18 @@
 .header-content__dot{
 
 }
-
+.header__black-div{
+    position: absolute;
+    left: 20px;
+    right: 0;
+    bottom: -251px;
+    height: 350px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.99) 100%);
+    z-index: 2;
+    border-radius: 0 0 0 20px;
+    top: 56rem;
+    width: 100%;
+}
 
 
 
@@ -325,7 +365,7 @@
    left: 0;
    width: 100%;
    height: 100%;
-   opacity: 60%;
+   opacity: 30%;
    z-index: -10;
 }
 .static__wrapper{
@@ -366,22 +406,3 @@
 
 
 
-
-
-.fullscreen-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -100;
-}
-
-.fullscreen-bg__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
