--- a/Css/app.css
+++ b/Css/app.css
@@ -406,3 +406,97 @@
 
 
 
+
+
+  /*
+  
+  ---------------------footer--------------------
+  
+  */
+
+
+.footer{
+
+  }
+.footer__top{
+
+  } 
+.footer__subscribe{
+
+  }
+.footer__sub{
+
+  }
+.footer__sub-inputs{
+
+  }
+.footer__sub-input{
+
+  }
+.footer__sub-button{
+
+  }
+.footer__line1{
+
+  }
+.footer__main{
+
+  }
+.footer__about-us{
+
+  }
+.footer__title{
+
+  }
+.footer__description{
+
+  }
+.footer__contact-info{
+
+  }
+.footer__opening-hours{
+
+  }
+.footer__week{
+
+  }
+.footer__time{
+
+  }
+.footer__week-title{
+
+  }
+.footer__title-description{
+
+  }
+.footer__line2{
+
+  }
+
+.footer__bottom{
+
+}
+.footer-bottom-left{
+
+}
+.footer__copy-right{
+
+}
+.footer-bottom-right{
+
+}
+.footer__payment{
+
+}
+.footer__visa{
+
+}
+.footer__mastercard{
+
+}
+.footer__paypal{
+
+}
+.footer__chevrons-up{
+
+}
