--- a/Css/app.css
+++ b/Css/app.css
@@ -91,17 +91,29 @@
     width: 100%;
     height: 100%;
     position: relative;
+   
+}
+.header::after{
+  content: '';
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 1rem;
+  top: 0;
+  left: 0;
+  opacity: .5;
+  z-index: 1;
 }
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: .6;
-    z-index: -2;
-    box-shadow: 10px 85px 0px 0px rgba(12, 0, 46, .07);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90.5rem;
+  background: #000;
+  opacity: .7;
+  z-index: 0;
+  border-radius: 1rem;
 }
 .header-content{
     text-align: center;
@@ -214,7 +226,6 @@
   border: 1px dashed rgba(255,255,255,.2);
   z-index: -2;
   box-shadow: 0px 0px 0px 5px rgba(255,255,255,.09);
-  border-radius: 10px;
 }
 
 
@@ -363,9 +374,8 @@ position: relative;
   position: absolute;
   left: 50%;
   width: 1px;
-  border-left: 1px dotted rgba(255,255,255,.2);
+  border-left: 2.5px dotted rgba(255,255,255,.2);
   height: 127px;
-  border: rem;
   border: -1rem;
   bottom: -15rem;
   }
@@ -373,10 +383,9 @@ position: relative;
     content: '';
   position: absolute;
   left: 50%;
-  width: 1px;
-  border-left: 1px dotted rgba(255,255,255,.2);
+  width: 1rem;
+  border-left: 2.5px dotted rgba(255,255,255,.2);
   height: 127px;
-  border: rem;
   border: -1rem;
   top: -15rem;
   }
@@ -396,6 +405,10 @@ position: relative;
 .header__social:nth-child(1){
   margin-top: -.5rem;
 }
+.header__social:hover{
+  background-color: var(--white);
+  border-radius: 50%;
+}
 .header-bottom{
   background: #0A0B0A;
   z-index: 25;
@@ -405,9 +418,9 @@ position: relative;
   margin-top: 11rem;
   width: 60%;
   margin-left: 57rem;
-  margin-right: -2.5rem;
+  margin-right: -1.5rem;
   height: 25rem;
-  border-radius: 2rem;
+  border-top-left-radius: 2rem;
 }
 .header-bottom__content{
   padding: 0 3rem;
@@ -456,6 +469,7 @@ position: relative;
   line-height: 3rem;
   height: 22rem;
   margin-top: -2rem;
+  margin-left: -10rem;
 }
 .header-content__card::before{
   content: '';
