--- a/Css/app.css
+++ b/Css/app.css
@@ -1076,6 +1076,132 @@ width: 25%;
 
 
 
+
+
+
+
+
+
+
+
+
+
+/*
+
+---------------------Section-Comments--------------------
+
+*/
+
+.section-comment{
+  width: 60%;
+  height: 50rem;
+  background-color: var(--white);
+  color: var(--main-bg-color);
+  border-radius: 1.5rem;
+  padding-top: 1rem;
+}
+.section-comment__wrapper{
+  text-align: center;
+}
+.section-comment__titles{
+
+}
+.section-comment__title-top{
+  font-size: 2rem;
+  color: var(--main-color);
+}
+.section-comment__title{
+  font-size: 2.5rem;
+  color: var(--main-bg-color);
+}
+.section-comment__name{
+  color: var(--main-color);
+  font-size: 2rem;
+}
+.section-comment__dot{
+  position: relative;
+  width: 150px;
+  display: inline-block;
+  margin-top: 14px;
+}
+.sectoin-comment-span {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--main-color);
+  display: inline-block;
+}
+.section-comment__dot::after{
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 1px;
+  border-top: 1px dotted;
+  top: 50%;
+  margin-top: 1px;
+  left: 0;
+
+}
+.section-comment__dot::before{
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 1px;
+  border-bottom: 1px dotted;
+  top: 50%;
+  margin-top: 1px;
+  right: 0;
+}
+.section-comment__main{
+  box-shadow: 0px 10px 34px 0px rgba(12, 0, 46, .07);
+  background-color: var(--white);
+  border:dashed 2px #ccccd1;
+  margin-top: 3rem;
+  height: 25rem;
+}
+.section-comment__image-container{
+}
+.section-comment__image{
+  border-radius: 100%;
+  width: 6rem;
+}
+.section-comment__titles{
+
+}
+.section-comment__title{
+
+}
+.section-comment__description{
+  line-height: 3rem;
+}
+.section-comment__stars{
+  margin-bottom: 3rem;
+}
+.section-comment__star{
+  color: var(--main-color);
+}
+.section-comment__number{
+  color: var(--main-bg-color);
+  border-radius: 100%;
+  padding: 1rem 1.2rem;
+  background-color: var(--white);
+  border: dashed 1px #ccccd1;
+}
+.section-comment__pagination{
+
+}
+
+.book-table__dot{
+ 
+}
+
+
+
+
+
+
+
+
 /*
 
 ---------------------footer--------------------
