--- a/Css/about-us.css
+++ b/Css/about-us.css
@@ -185,3 +185,74 @@
     background-color:var(--main-color);
     opacity: 1;
  }
+
+
+
+
+
+
+
+
+
+
+.pro-video{
+    width: 60%;
+    background: url('../Images/bg-image/bg1.jpg');
+    height: 40rem;
+    border-radius: 1.5rem;
+    background-size: cover;
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: repeat;
+    background-origin: content-box;
+    position: relative;
+    margin-top: 3rem;
+}
+.pro-video__wrapper{
+    text-align: center;
+
+    padding-top: 10rem;
+}
+.pro-video__title{
+    color: var(--main-color);
+    z-index: 3;
+    position: relative;
+}
+.pro-video__caption{
+    position: relative;
+    z-index: 3;
+    font-size: 2.5rem;
+    padding: 0 14rem;
+    line-height: 3.1rem;
+}
+.pro-video__play{
+    z-index: 3;
+    position: relative;
+}
+.pro-video__icon{
+    z-index: 3;
+    position: relative;
+    background: var(--footer-bg);
+    padding: 2rem;
+    border-radius: 100%;
+    cursor: pointer;
+    color: var(--main-color);
+    transition: all .5s ease;
+}
+.pro-video__icon:hover{
+    background: var(--main-color);
+    color: var(--footer-bg);
+}
+.pro-video__dark{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background: #000;
+   opacity: .6;
+   z-index: 2;
+   border-radius: 1.5rem;
+
+}
+
