--- a/Css/about-us.css
+++ b/Css/about-us.css
@@ -57,7 +57,7 @@
     width: 60%;
     height: 18rem;
     border-radius: 1.5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 3rem;
     margin-top: 3rem;
     border: solid .1px rgba(255,255,255,.1);
     text-align: center;
@@ -189,6 +189,12 @@
 
 
 
+/* 
+
+- ProVideo
+
+*/
+
 
 
 
@@ -256,3 +262,57 @@
 
 }
 
+
+
+
+/* 
+
+- Team
+
+*/
+
+.section-team{
+
+}
+.section-team__wrapper{
+
+}
+.section-team__teams{
+
+}
+.section-team__team{
+
+}
+.section-team__team-top{
+
+}
+.section-team__team-image-container{
+
+}
+.section-team__team-image{
+
+}
+.section-team__detail{
+
+}
+.section-team__title{
+
+}
+.section-team__socials{
+
+}
+.section-team__social{
+
+}
+.section-team__content{
+
+}
+.section-team__title{
+
+}
+.section-team__caption{
+
+}
+.section-team__description{
+
+}
