--- a/Css/app.css
+++ b/Css/app.css
@@ -94,7 +94,9 @@ li{
   width: 100%;
   height: 100%;
   position: relative;
- 
+  transition: all .5s ease;
+  z-index: 100;
+
 }
 .header::after{
 content: '';
@@ -502,7 +504,9 @@ color: var(--main-color);
 
 
 
-
+.main-data{
+  width: 60%;
+}
 
 
 
@@ -517,29 +521,37 @@ color: var(--main-color);
 
 
 
-
+.static-main{
+  position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: -3;
+}
 
 .static{
   width: 36%;
-  height: 86vh;
-  background-image: url(../Images/bg-image/10.jpg);
+  height: 98%;
+  background-image: url(../Images/static.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 1rem;
-  position: relative;
-  z-index: 10;
-  margin-left: 2rem;
+  position: absolute;
+  z-index: -100;
+  left: 4rem;
+  top:1rem;
 }
-.static::after{
- content: '';
- position: absolute;
- background-color:var(--main-bg-color);
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
- opacity: 30%;
- z-index: -10;
+.overlay-static{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90.3rem;
+  background: #000;
+  opacity: .7;
+  z-index: 0;
+  border-radius: 1rem;
 }
 .static__wrapper{
   position: relative;
@@ -581,7 +593,7 @@ background-image: url(../Images/7.jpg);
 
 .about-us {
   background-color: var(--white);
-  width: 60%;
+  width: 100%;
   color: var(--main-bg-color);
   border-radius: 1.5rem;
   height: 80rem;
@@ -750,7 +762,7 @@ margin-left: 1.5rem;
 
 .book-table{
   background-color: var(--footer-bg);
-  width: 60%;
+  width: 100%;
   border-radius: 2rem;
   height: 70rem;
   text-align: center;
@@ -873,7 +885,7 @@ margin-left: 1.5rem;
 
 .special-select{
   background-color: var(--white);
-  width: 60%;
+  width: 100%;
   border-radius: 2rem;
   height: 85rem;
   margin-top: 3rem;
@@ -1026,7 +1038,7 @@ width: 25%;
 
 .section-note{
   background-color: var(--footer-bg);
-  width: 60%;
+  width: 100%;
   height: 40rem;
   border-radius: 1.5rem;
   margin-top: 3rem;
@@ -1095,7 +1107,7 @@ width: 25%;
 */
 
 .section-comment{
-  width: 60%;
+  width: 100%;
   height: 50rem;
   background-color: var(--white);
   color: var(--main-bg-color);
