--- a/Css/app.css
+++ b/Css/app.css
@@ -84,9 +84,21 @@ li{
 -- Header
 
 */
+.fade-effect {
+  animation: fadeAnimation 2s;
+}
 
+@keyframes fadeAnimation {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 .header{
-  background-image: url(../Images/bg-image/bg1.jpg);
+  border-radius: 1.5rem;
+
+}
+
+.header__wrapper{
+  background-image: url(../Images/bg-image/bg3.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 1rem;
@@ -96,30 +108,34 @@ li{
   position: relative;
   transition: all .5s ease;
   z-index: 100;
+  border-radius: 1.5rem;
 
 }
-.header::after{
-content: '';
-position: absolute;
-background-color: black;
-width: 100%;
-height: 1rem;
-top: 0;
-left: 0;
-opacity: .5;
-z-index: 1;
+.header-background-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* تصویر پس‌زمینه را پشت سایر عناصر قرار می‌دهد */
+  transition: opacity 2s ease-in-out;
+  opacity: 0;
+  border-radius: 1.5rem;
 }
-.overlay {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 90.5rem;
-background: #000;
-opacity: .7;
-z-index: 0;
-border-radius: 1rem;
+.header-background-image.loaded {
+  opacity: 1;
 }
+
+.header__dark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90.5rem;
+  background: #000;
+  opacity: .5;
+  z-index: 0;
+  border-radius: 1.5rem;
+  }
 .header-content{
   text-align: center;
   height: 50%;
@@ -127,6 +143,7 @@ border-radius: 1rem;
 }
 .header-content__item{
   line-height: 4rem;
+  z-index: 12;
 }
 .header-content__left{
 
@@ -357,6 +374,7 @@ margin-top: -3px;
 }
 
 .nav__logo {
+  z-index: 1;
 }
 .nav__log-image{
   width: 15rem;
@@ -373,6 +391,7 @@ margin: -8.5rem 8rem 0 8rem;
 }
 .header__socials{
 position: relative;
+margin-top: -9rem;
 }
 .header__socials::after{
 content: '';
@@ -420,12 +439,13 @@ z-index: 25;
 justify-content: space-between;
 display: flex;
 align-items: center;
-margin-top: 11rem;
+margin-top: 9.2rem;
 width: 60%;
 margin-left: 57rem;
 margin-right: -1.5rem;
 height: 25rem;
 border-top-left-radius: 2rem;
+border-bottom-left-radius:2rem;
 }
 .header-bottom__content{
 padding: 0 3rem;
@@ -460,6 +480,7 @@ margin-top: 6.5rem;
 cursor: pointer;
 transition: all .5s ease;
 text-align: center;
+position: relative;
 }
 .header__plaly-icon:hover{
 background: var(--white);
