--- a/Css/menu.css
+++ b/Css/menu.css
@@ -80,3 +80,12 @@
     font-size: 1.5rem;
     padding: 1rem 1rem 0 1rem;
 }
+
+
+.section-menu__main-dishes-image-container{
+    width: 86px;
+    height: 78px;
+    overflow: hidden;
+    border-radius: 50%;
+    box-shadow: 0px 10px 14px 0px rgba(12, 0, 46, .2);
+}
