--- a/Css/app.css
+++ b/Css/app.css
@@ -94,11 +94,11 @@ li{
 }
 .header{
   border-radius: 1.5rem;
-
+  background-color: var(--main-bg-color);
 }
 
 .header__wrapper{
-  background-image: url(../Images/bg-image/bg3.jpg);
+  background-image: url(../Images/bg-image/bg1.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 1rem;
@@ -116,7 +116,7 @@ li{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1; /* تصویر پس‌زمینه را پشت سایر عناصر قرار می‌دهد */
+  z-index: -1; 
   transition: opacity 2s ease-in-out;
   opacity: 0;
   border-radius: 1.5rem;
@@ -611,7 +611,6 @@ background-image: url(../Images/7.jpg);
 
 */
 
-
 .about-us {
   background-color: var(--white);
   width: 100%;
@@ -621,7 +620,7 @@ background-image: url(../Images/7.jpg);
   padding: 0 5rem;
   position: relative;
   z-index: -101;
-  margin-top: 2.6rem;
+  margin-top: .8rem;
 }
 
 .container {}
@@ -709,7 +708,7 @@ background-image: url(../Images/7.jpg);
 
 
 .about-us__left {
-background-image: url(../Images/7.jpg);
+background-image: url(../Images/bg-image/bg1.jpg);
 background-size: cover;
 background-position: center;
 border-radius: 1rem;
@@ -735,10 +734,18 @@ position: relative;
   color: var(--main-color);
   justify-content: space-between;
   margin: 45rem 3rem;
+  position: relative;
 }
 
 .about-us__button {
   gap: 3rem;
+  transition: all .5s ease;
+  cursor: pointer;
+}
+
+.about-us__button:hover{
+  gap: 3rem;
+  background-color: red;
 }
 
 .about-us__pagination {
