--- a/Css/app.css
+++ b/Css/app.css
@@ -932,6 +932,10 @@ margin-left: 1.5rem;
   box-shadow: 0px 10px 54px 0px rgba(12, 0, 46, .07);
 }
 .special-select__menus{
+  display: none;
+}
+.special-select__menus--show{
+  display: block;
 }
 .special-select__menu{
   justify-content: space-between;
@@ -1014,12 +1018,14 @@ width: 25%;
   cursor: pointer;
   transition: all 0.5s ease;
 }
+.special-select__category--active{
+  color: var(--main-color) !important;
+}
 .special-select__category:hover{
   color: var(--main-color) !important;
 }
-.special-select__category:hover .special-select__icon{
-  color: var(--main-color) !important;
-}
+
+
 .special-select__name{
 
 }
