--- a/Css/app.css
+++ b/Css/app.css
@@ -217,17 +217,23 @@ li{
 
 */
 
-
+.nav__icon-f{
+  font-size: 4rem;
+}
 
 
 
 .nav {
-  padding: 2rem 4rem 0 4rem;
+  padding: 11rem 4rem 0 4rem;
 }
 
 
 .nav__wrapper {
   justify-content: space-between;
+  position: fixed;
+  gap: 60rem;
+  top: 4.5rem;
+  z-index: 9999999999;
 }
 
 .nav__content {
@@ -1381,3 +1387,69 @@ margin-bottom: 3.5rem;
 .footer__main {
 border-bottom: 1px solid rgba(255,255,255,.1);
 }
+
+
+
+
+
+
+
+
+
+.menu-static__wrapper{
+  margin-top: 2rem;
+  position: relative;
+}
+
+.menu-static{
+  width: 80rem;
+  background-color: var(--footer-bg);
+  height: 60rem;
+  text-align: center;
+  border-radius: 1.5rem;
+  position: fixed;
+  top: 15rem;
+  right:5rem;
+  z-index: 99999999999999999999;
+  border: solid var(--bg-color) 4px;
+}
+.menu-static__lists{
+  gap: 6rem;
+  font-size: 3rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  text-align: center;
+  margin-right: -4rem;
+  flex-direction: column;
+}
+.menu-static__list{
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.menu-static__list:hover{
+  color: var(--main-color);
+}
+.menu-static__socials {
+  gap: 1rem;
+  position: absolute;
+  left: 29rem;
+  bottom: -6rem;
+}
+.menu-static__social{
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: var(--input-bg);
+  width: 5rem;
+  height: 5rem;
+  border-radius: .3rem;
+  text-align: center;
+  cursor: pointer;
+  padding-top: 1.3rem;
+  transition: all .5s ease;
+}
+.menu-static__social:hover{
+  background-color: var(--white);
+  border-radius: 50%;
+  }
+  .section-comment__dot--menu{
+    width: 15.8rem;
+  }
