--- a/Css/app.css
+++ b/Css/app.css
@@ -1467,3 +1467,17 @@ border-bottom: 1px solid rgba(255,255,255,.1);
   .section-comment__dot--menu{
     width: 15.8rem;
   }
+
+
+
+.dragging{
+  cursor: grab;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera, and Firefox */
+}
+
+
