--- a/Css/app.css
+++ b/Css/app.css
@@ -533,6 +533,7 @@ color: var(--main-color);
 
 .main-data{
   width: 60%;
+  margin-right:1rem;
 }
 
 
@@ -626,7 +627,7 @@ background-image: url(../Images/7.jpg);
   padding: 0 5rem;
   position: relative;
   z-index: -101;
-  margin-top: .8rem;
+  margin-top: 0;
 }
 
 .container {}
