--- a/Css/app.css
+++ b/Css/app.css
@@ -1174,6 +1174,7 @@ width: 25%;
   color: var(--main-bg-color);
   border-radius: 1.5rem;
   padding-top: 1rem;
+  margin-bottom: 42rem;
 }
 .section-comment__wrapper{
   text-align: center;
@@ -1286,10 +1287,14 @@ width: 25%;
 
 .footer{
 background-color: var(--footer-bg);
-width: 60%;
-border-radius: 1rem;
+width: 59.5%;
+border-radius: 1.5rem;
 position: relative;
 font-size: 1.3rem;
+ position:fixed;
+ bottom:1rem;
+ z-index: -999;
+ margin-right: 1rem;
 }
 .footer__top{
 padding-top: 5rem;
