--- a/Css/blog-detail.css
+++ b/Css/blog-detail.css
@@ -1,14 +1,269 @@
 .blog-detail{
     width: 60%;
     background-color: var(--white);
-    height: 100rem;
+    height: 240rem;
     padding: 4rem;
     border-radius: 1.5rem;
     text-align: center;
+    color: black;
 }
 .blog-detail__wrapper{
     
 }
 .section-comment__dot {
     color: black;
+}
+
+
+.blog-detail__image{
+    width: 120rem;
+    border-radius: 1.5rem;
+    margin-top: 4rem;
+    box-shadow: 0 10px 14px 0px rgba(0,0,0, .3);
+}
+
+.blog-detail__right{
+    background-color: #222222;
+    padding: 1rem;
+    border-radius: 1.5rem;
+    margin-top: -20rem;
+}
+.blog-detail__right-wrapper{
+    background-color: #191919;
+    color: var(--white);
+    width: 40rem;
+    height: 45rem;
+    border-radius: 1.5rem;
+    border: dashed white 1px;
+}
+.blog-detail__right-top{
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
+    margin: 0 2rem;
+}
+.blog-detail__right-p{
+    color: var(--main-color);
+    font-size: 2.5rem;
+    margin: 0 auto;
+    margin-top: 3rem;
+}
+.blog-detail__main{
+    margin: 0 3rem;
+}
+.blog-detail__lists{
+    flex-direction: column;
+    margin-right: -10rem;
+    margin: 3rem -2rem 0 2rem;
+}
+.blog-detail__list{
+    justify-content: space-between;
+    gap: 10rem;
+
+}
+.blog-detail__list-p{
+
+}
+.blog-detail__list-span{
+
+}
+.blog-detail__lis{
+
+}
+.blog-detail__button{
+    margin: 3rem 3rem 0 3rem;
+    height: 6rem;
+    background-color: #222222;
+}
+.blog-detail__left{
+    border: dashed 1px rgb(221,221,221);
+    margin-top: 2rem;
+    margin-right: 2rem;
+    width: 110rem;
+}
+.blog-detail__top{
+    justify-content: space-between;
+    margin: 2rem 5rem 0 5rem;
+    padding-bottom: 2rem;
+    border-bottom: dashed 1px rgb(221,221,221);
+
+}
+.blog-detail__top-title{
+    border: dashed 1px rgb(221,221,221);
+    padding: 2rem;
+    background-color: #F9F9F9;
+}
+
+.blog-detail__views{
+
+}
+.blog-detail__main{
+
+}
+.blog-detail__main-title{
+
+}
+.blog-detail__main-description{
+    line-height: 3rem;
+    background-color: rgb(249,249,249);
+    padding: 3rem;
+    border: dashed 1px rgb(221,221,221);
+    font-size: 1.8rem;
+    color: #8D9195;
+}
+.blog-detail__bottom{
+    margin-right: 3rem;
+}
+.blog-detail__top-tag{
+
+}
+.blog-detail__tags{
+
+}
+.blog-detail__tag{
+    background-color: #F2F2F2;
+    padding: 1rem;
+    margin-right: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content-nav-fixed {
+	position:relative;
+	padding:0 30px;
+	height: 120px;
+	background: #222;
+	margin-top: 50px;
+	border-radius: 10px;
+}
+.content-nav-fixed:after {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    background: #191919;
+    border-radius: 10px;
+    z-index: 1;
+    border: 1px dashed rgba(255,255,255,.2);
+}
+.content-nav-fixed:before {
+	content:'';
+	position:absolute;
+	left:50%;
+	width:1px;
+	height:20px;
+	top:50%;
+	margin-top:-10px;
+	background:rgba(255,255,255,0.21);
+	z-index:100;
+}
+.content-nav-fixed ul {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	position: relative;
+	z-index: 10;
+}
+.content-nav-fixed li {
+	width:100%;
+	display:block;
+	position:relative;
+}
+.content-nav-fixed li:first-child {
+	border:none;
+}
+.content-nav-fixed li a.ln , .content-nav-fixed li a.rn {
+	color:var(--main-color);
+	text-transform: uppercase;
+	position:relative;
+	width:100%;
+	height: 120px;
+	line-height: 120px;
+}
+.content-nav-fixed li a.ln  {
+	text-align:left;
+	float:left;
+	padding-left: 120px;
+}
+.content-nav-fixed li a.rn  {
+	text-align:right;
+	float:right;
+	padding-right: 120px;
+}
+.content-nav-fixed li a:hover:before {
+	top:0;
+}
+.content-nav-fixed li a.ln i , .content-nav-fixed li a.rn i  {
+	position:relative;
+	z-index:50;
+    transform: translateX(0);
+	transition: all .3s linear;
+	color:#fff;
+}
+.content-nav-fixed li a.ln:hover i   {
+    transform: translateX(-85px);
+	transition-delay: .35s;
+}
+ .content-nav-fixed li a.rn:hover i  {
+    transform: translateX(85px);
+	transition-delay: .35s;
+}
+.content-nav-fixed li a span {
+	font-size:12px;
+	text-transform:uppercase;
+	letter-spacing:2px;
+	font-weight:700;
+	position:relative;
+	z-index:10;
+}
+.content-nav-fixed li a.ln span {
+	padding-left:15px;
+}
+.content-nav-fixed li a.rn span  {
+	padding-right:15px;
+}
+.content-nav_mediatooltip {
+	position:absolute;
+	bottom:50%;
+	margin-bottom:-40px;
+	overflow:hidden;
+	width:80px;
+	height:80px;
+	border-radius:50%;
+}
+.content-nav-fixed li .overlay {
+	opacity: 0;
+	transition: all .3s linear;
+}
+.content-nav-fixed li:hover    .overlay {
+	opacity: .7;
+	transition-delay: .3s
+}
+.content-nav_mediatooltip.cnmd_leftside {
+	left:0;
+}
+.content-nav_mediatooltip.cnmd_rightside {
+	right:0;
+}
+.checkout-table-container {
+	overflow: hidden;
+}
+.checkout-table {
+	border: 1px solid #eee;
+	float:left;
+	width:100%;
+	font-size:1.2em;
+ 	background:#fff;
+	font-weight: 600;
 }
