--- a/Css/app.css
+++ b/Css/app.css
@@ -628,8 +628,8 @@ background-image: url(../Images/7.jpg);
   height: 80rem;
   padding: 0 5rem;
   position: relative;
-  z-index: -101;
-  margin-top: 0;
+  z-index: 101;
+  margin-top: 2rem;
 }
 
 .container {}
@@ -641,11 +641,11 @@ background-image: url(../Images/7.jpg);
 }
 .about-us__flower {
   position: absolute;
-  width: 20rem;
+  width: 18rem;
   right: -2rem;
-  top: -9rem;
-  height: 20rem;
-  z-index: -100;
+  top: 0rem;
+  height: 16rem;
+  z-index: -999896;
 }
 .about-us__right {
   width: 50%;
@@ -1176,7 +1176,7 @@ width: 25%;
   color: var(--main-bg-color);
   border-radius: 1.5rem;
   padding-top: 1rem;
-  margin-bottom: 42rem;
+  margin-bottom: 3rem;
 }
 .section-comment__wrapper{
   text-align: center;
@@ -1289,12 +1289,9 @@ width: 25%;
 
 .footer{
 background-color: var(--footer-bg);
-width: 59.5%;
+width: 60%;
 border-radius: 1.5rem;
-position: relative;
 font-size: 1.3rem;
- position:fixed;
- bottom:1rem;
  z-index: -999;
  margin-right: 1rem;
 }
@@ -1348,6 +1345,7 @@ gap: 5rem;
 }
 .footer__socials{
 gap: .5rem;
+font-size: 2rem;
 }
 .footer__social{
 border: 1px solid rgba(255, 255, 255, 0.1);
